[package]
name = "etomic-swap-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.0"
bincode = "1.3.1"
serde = "1.0.196"
serde_derive = "1.0.103"
serde_json = "1.0.113"
serde_with = "3.5.1"

[features]
default = []
test-bpf = []

[profile.release]
lto = true
opt-level = "z"
