[package]
name = "etomic-swap-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.7"
spl-token = "4.0.0"
bincode = "1.3.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_with = "3.7.0"
hex = { version = "0.4.3", features = [] }

[dev-dependencies]
solana-program-test = "1.18.7"
solana-sdk = "1.18.7"
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = []
test-bpf = []

[profile.release]
lto = true
opt-level = "z"
